# CoolLittleObservatory

./: .env.example  AGENT_WORKFLOW.md  README.md  UI_REFACTOR_GUIDE.md
agents/: api_researcher.md  astronomy_researcher.md  backend_architect.md  backend_implementer.md  cesium_specialist.md  communication.md  data_pipeline_engineer.md  data_researcher.md  docs_writer.md  frontend_architect.md  frontend_implementer.md  integration_reviewer.md  orchestrator.md  performance_reviewer.md  product_architect.md  qa_reviewer.md  ux_system_designer.md
backend/: .env.example  .gitignore  SETUP.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  content.py  deep_space.py  featured.py  health.py  neo.py  objects.py  orbit.py  search.py  solar_system.py
backend/app/core/: cache.py  config.py  dependencies.py
backend/app/data/demo/: content.json  deep_space.json  featured_tours.json  neo.json  orbit.json  solar_system.json
backend/app/models/: common.py  content.py  deep_space.py  neo.py  orbit.py  search.py  solar_system.py
backend/app/providers/: base.py  demo.py  nasa.py  orbit.py
backend/app/services/: content.py  deep_space.py  featured.py  health.py  helpers.py  neo.py  orbit.py  registry.py  search.py  solar_system.py
backend/tests/: test_orbit_demo.py  test_search_service.py  test_solar_system_service.py
backend/universe_visualizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: SETUP.md  index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+19 files in other folders)
